[gd_scene load_steps=4 format=3 uid="uid://34et0gk5gold"]

[ext_resource type="Script" uid="uid://b7h0yif8vekvi" path="res://containers/song_container.gd" id="1_hlyua"]
[ext_resource type="Script" uid="uid://1dkhm61wc2jl" path="res://addons/MusicPlayer/MusicController.gd" id="2_pq6ex"]

[sub_resource type="LabelSettings" id="LabelSettings_hlyua"]

[node name="SongContainer" type="VBoxContainer"]
auto_translate_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hlyua")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SongCover" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2

[node name="Name" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Song Test"

[node name="Author" type="Label" parent="."]
layout_mode = 2
text = "author:arknights"
label_settings = SubResource("LabelSettings_hlyua")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="PlayerCom" type="Control" parent="."]
custom_minimum_size = Vector2(1024, 100)
layout_mode = 2
script = ExtResource("2_pq6ex")
metadata/_custom_type_script = "uid://1dkhm61wc2jl"

[connection signal="pressed" from="HBoxContainer/Name" to="." method="_on_name_pressed"]
